refactor(r5): extract BasePart for commons part management